# linux-kernel-learning

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.c  xmake.lua
.archived/: Makefile.deprecated
snippet/: CMakeLists.txt
snippet/AnsiPedantic/: CMakeLists.txt  main.c
snippet/Attribute/: CMakeLists.txt  main1.c  main2.c  main3.c
snippet/BuiltInFunction/: CMakeLists.txt  main1.c  main2.cpp  main3.c
snippet/CaseRange/: CMakeLists.txt  main.c
snippet/DoWhile/: CMakeLists.txt  main.c
snippet/EpollTest/: main.cpp  xmake.lua
snippet/FileIOApiDemo/: CMakeLists.txt  README.md  main1.cpp  main2.cpp
snippet/FuncName/: CMakeLists.txt  README.md  main.c  main.cpp
snippet/GlibcAioTest/: main1.cpp  main2.cpp  main3.cpp  xmake.lua
snippet/IoctlTest/: main.cpp  xmake.lua
snippet/LibAioTest/: README.md  lhelper.c  main.c  xmake.lua
snippet/OpenTest/: main.cpp  xmake.lua
snippet/ReadTest/: main.cpp  xmake.lua
snippet/ReadWriteTest/: main.cpp  xmake.lua
snippet/SelectTest/: main.cpp  xmake.lua
snippet/SignalTest/: main.cpp  main1.cpp  main2.cpp  xmake.lua
snippet/TemporaryTest/: CMakeLists.txt  main.c
snippet/Typeof/: CMakeLists.txt  main.c
snippet/ZeroLengthArray/: CMakeLists.txt  main.c
src/: Makefile  add.h  calc.c  calc.h  file.c  file.h  fops.c  fops.h  hello.c  lcalc.c  lcalc.h  lfops.c  lfops.h  lglobal.c  lglobal.h  ltimer.c  ltimer.h  main.c  main.h  variable.c
